unpackaged/main/default/objects/National_Funding_Settings__c/National_Funding_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>National Funding Settings</label>
</CustomObject>