unpackaged/main/default/objects/National_Funding_Settings__c/fields/Broker_Commission_Eligibility_Days__c.field-meta.xml
<CustomField>
    <fullName>Broker_Commission_Eligibility_Days__c</fullName>
    <description>Broker is eligible for commission if new deal was submitted within the last X days (PD-2601)</description>
    <inlineHelpText>Broker is eligible for commission if new deal was submitted within the last X days</inlineHelpText>
    <label>Broker Commission Eligibility Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>