unpackaged/main/default/objects/National_Funding_Settings__c/fields/Chart_of_Account_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Chart_of_Account_Batch_Size__c</fullName>
    <description>ChartOfAccountBatch - Determine the number of Queued Event records to process per batch</description>
    <inlineHelpText>ChartOfAccountBatch - Determine the number of Queued Event records to process per batch</inlineHelpText>
    <label>Chart of Account Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>