unpackaged/main/default/objects/National_Funding_Settings__c/fields/Maturity_Default_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Default_Fee_Amount__c</fullName>
    <inlineHelpText>Global Maturity Default fee that is used unless Repayment has another one set.</inlineHelpText>
    <label>Maturity Default Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>